# vartalaap-v2

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
crates/vartalaap-blobs/: Cargo.toml
crates/vartalaap-blobs/src/: lib.rs
crates/vartalaap-core/: Cargo.toml
crates/vartalaap-core/examples/: two_node_chat.rs
crates/vartalaap-core/src/: lib.rs  node.rs
crates/vartalaap-core/tests/: _audit_scratch.rs
crates/vartalaap-crypto/: Cargo.toml
crates/vartalaap-crypto/src/: lib.rs  ratchet.rs
crates/vartalaap-identity/: Cargo.toml
crates/vartalaap-identity/src/: lib.rs
crates/vartalaap-net/: Cargo.toml
crates/vartalaap-net/src/: lib.rs
crates/vartalaap-store/: Cargo.toml
crates/vartalaap-store/src/: lib.rs
crates/vartalaap-sync/: Cargo.toml
crates/vartalaap-sync/src/: lib.rs
docs/superpowers/plans/: 2026-06-24-vartalaap-foundation.md
docs/superpowers/specs/: 2026-06-24-vartalaap-design.md
packaging/: Dockerfile.ubuntu2204
scripts/: README.md  build-linux-appimage.sh  build-linux-deb.sh  build-macos.sh  build-windows.sh
