[workspace]
resolver = "2"
members = ["crates/*"]
# The Tauri app builds separately (its own Cargo.lock/target): `generate_context!`
# embeds the built frontend, which would break workspace-wide cargo commands.
exclude = ["app"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
bs58 = "0.5"
hex = "0.4"
redb = "2"
