[package]
name = "vartalaap-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
vartalaap-identity = { path = "../vartalaap-identity" }
vartalaap-crypto = { path = "../vartalaap-crypto" }
vartalaap-store = { path = "../vartalaap-store" }
vartalaap-net = { path = "../vartalaap-net" }
vartalaap-sync = { path = "../vartalaap-sync" }
vartalaap-blobs = { path = "../vartalaap-blobs" }
thiserror = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-lite = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
rand = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
