[package]
name = "vartalaap-identity"
version = "0.1.0"
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
