[package]
name = "vartalaap-net"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
futures-lite = "2"
iroh = "1"
iroh-mdns-address-lookup = "0.4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
