[package]
name = "vartalaap-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
vartalaap-crypto = { path = "../vartalaap-crypto" }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
